progress on reviewer response

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -102,7 +102,7 @@ The reviewer raised the issue of how the likely truth of a given interpretation 
 
 \item \emph{My largest reservation is that the main result, which is that contextual predictability affects whether an interpretation is distributive or collective, is really only experimentally evaluated (in Experiment 3) for three words (\emph{big}, \emph{heavy}, and \emph{tall}) in one context (moving boxes). The paper would be much stronger if either the number of words were broader, or the contexts were broader.}
 
-We have followed the reviewer's suggestion, investigating contextual predictability and speaker knowledge with a much broader set of predicates (\emph{Expt.~4: Generalizing our findings}). We extended the Cubert paraphrase endorsement paradigm from Expt.~3, testing a total of 25 dimensional adjectives (cf.~the three predicates tested in Expt.~3). We grouped these adjectives into seven different semantic classes (capacity, depth, height, length, size, weight, and width) and two polarities (positive and negative; e.g., \emph{tall} vs. \emph{short}). The results of the new experiment 1) replicate the results of Expt.~3 with a broader set of lexical items, and 2) add nuance to our claims about contextual predictability. We continue to find that collective interpretations depend on the contextual predictability of collective properties, such that increasing predictability by regularizing arrangements increases rates of collective interpretations. However, to increase predictability one must regularize the specific dimension under discussion (e.g., the height dimension for \emph{tall} but not \emph{long}, or the width dimension for \emph{narrow} but not \emph{deep}). Moreover, we observed that contextual predictability interacts with yet another aspect of the pragmatic calculus that influences interpretation choice, namely the probability that a specific interpretation would truthfully describe a state of affairs. When an interpretation appears unlikely to be true (e.g., describing a tall stack of boxes as collectively short), listeners are unlikely to attribute that interpretation to speakers' utterances. \gcs{add more}
+We have followed the reviewer's suggestion, investigating contextual predictability and speaker knowledge with a much broader set of predicates (\emph{Expt.~4: Generalizing our findings}). We extended the Cubert paraphrase endorsement paradigm from Expt.~3, testing a total of 25 dimensional adjectives (cf.~the three predicates tested in Expt.~3). We grouped these adjectives into seven different semantic classes (capacity, depth, height, length, size, weight, and width) and two polarities (positive and negative; e.g., \emph{tall} vs. \emph{short}). The results of the new experiment 1) replicate the results of Expt.~3 with a broader set of lexical items, and 2) add nuance to our claims about contextual predictability. We continue to find that collective interpretations depend on the contextual predictability of collective properties, such that increasing predictability by regularizing arrangements increases rates of collective interpretations. However, to increase predictability one must regularize the specific dimension under discussion (e.g., the height dimension for \emph{tall} but not \emph{long}, or the width dimension for \emph{narrow} but not \emph{deep}). Moreover, we observed that contextual predictability interacts with yet another aspect of the pragmatic calculus that influences interpretation choice, namely the probability that a specific interpretation would truthfully describe a state of affairs. When an interpretation appears unlikely to be true (e.g., describing a tall stack of boxes as collectively short), listeners are unlikely to attribute that interpretation to speakers' utterances. We now discuss these new results and their implications in our revised manuscript.
 
 \item \emph{I really liked Experiment 2 but it is possible that these means simply reflect different distributions of extreme values. For this reason I think you should include violin plots as well as means, just to assure ourselves that that isn't happening.}
 
@@ -112,7 +112,7 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \item \emph{I'm kind of surprised there were only two alternatives considered for the speakers knowledge state: full or sum. It seems to me that the non-regular condition corresponds to a situation that is neither: the speaker has knowledge of the individual boxes, and can kind of vaguely infer what the full set might look like (e.g., by mentally stacking them) but only noisily so.}
 
-\gcs{response will depend on whether we include the plural predication arrangement model}
+We intentionally separated the effects of speaker knowledge and noise in the aggregation of collective properties (by, e.g., mental stacking). Our knowledge manipulation models whether the speaker has access to individual vs. collective properties of the state when choosing to communicate about it. We capture effects of noise explicitly in our noise manipulation, which affects the stability of collective properties. Noise is a property of the communication scenario (i.e., of the world), so it applies to both speakers and listeners equally; we approximate the noise introduced by mental stacking with our noise manipulation.
 
 \item \emph{There needs to be more information about the experimental participants. Nationality? Age? How much were they paid?}
 
@@ -317,15 +317,67 @@ Please see our responses to Reviewer 2's points 6 and 28 above.
 
 \ben
 
+\item \emph{p.~3: Piano example in first paragraph: I'm not convinced this is a good example. In the first sentence, ``piano'' is singular so there's one piano and no ambiguity about it; it isn't obvious that there is a problem to be solved from this example. The example with ``the boxes are heavy'' vs.~``the boxes are big'' is much more compelling.}
+	
+We have removed this example.
+
+\item \emph{p.~4:~``Second, it leaves unexplained why some predicates would contain pluralities and others not—is there a deeper explanation in terms of the properties named?'' An obvious null hypothesis here is that stubborn distributivity is randomly distributed across classes of adjectives; in that case there is nothing to be explained. You can motivate against this hypothesis here by noting cross-linguistic similarities in which classes of adjectives are stubbornly distributed.}
+
+We chose to avoid discussing this straw-man hypothesis in order to keep focus on our actual hypothesis and in an attempt to keep our already-too-long paper short.
+
+\item \emph{p. 5 top: The logic in this paragraph is hard to follow. Initially I didn't understand why ``the collective use of tall would be more likely to mislead a listener than that of heavy'' -- if I say ``the boxes are tall'' and mean it distributively, surely that conveys that the boxes are in an arrangement such that they are tall? And if their arrangement *is* already in common ground, then what utility is there in saying they are tall?
+Is the logic that there are many different ways in which the boxes could be tall, so ``tall'' is not very informative? 
+In RSA terms, it was helpful for me to think of this first p. at the level of L1, whereas the exposition here seems to be going back and forth between S1 and L1. I think I got confused because of things like ``collective interpretations will be avoided by speakers'' -- it's confusing to talk about speakers choosing an interpretation.}
+
+We have attempted to clarify our point by highlighting the possibility that a speaker and listener could encounter the relevant plurality in differing arrangements. As for speaker's choosing interpretations, our model of utterance disambiguation has the utterance-generation process (i.e., $S_1$) proceed with a fixed interpretation; $L_1$, the real-world listener, reasons about this process in interpreting an underspecified (i.e., ambiguous) utterance: what would that speaker have been most likely to have intended?
+
+\item \emph{How was heaviness represented in the questions?}
+
+Heaviness was represented visually.
+
+\item \emph{p.~10 bottom: ``Appendix Appendix A''}
+
+We have corrected this error.
+
+\item \emph{p.~11: Why the small effect of scenario on interpretation of ``heavy''? Maybe the participants weren't paying much attention to the scenario?}
+
+We speculate on the lack of a significant effect of the scenario manipulation later in our paper (cf.~our response to Reviewer 3's point 12 below). Given that we had the same manipulation in our Expt.~3 and found a significant effect there, we doubt that participants were simply ignoring it.
+
+\item \emph{p.~15: 11Appendix Appendix B''}
+
+We have corrected this error.
+
+\item \emph{p.~16: The black-on-black error bars are hard to see.}
+
+We have lightened the bars to improve visibility.
+
 \item \emph{For experiment 2, I wonder if some of the nouns are really plural (\emph{conditions}, \emph{results}).}
 
 This is a reasonable concern about our corpus-based experimental items, which we selected solely on the basis of frequency of occurrence. We ran the follow-up in Expt.~2a with a more targeted set of items in part to allay this concern. There, subject nouns denoted real-world (as opposed to abstract or psychological) entities.
 
-\item \emph{For experiment 2, some of the collective interpretations imply a distributive one (\emph{the dogs were quiet}).}
+\item \emph{For experiment 2, some of the collective interpretations imply a distributive one (\emph{the dogs were quiet}). This is an interesting factor, which is graded among nouns, which is not discussed so far.}
+
+We agree that this factor is interesting, but we have chosen to leave its exploration to future work.
+
+\item \emph{p.~20: ``Appendix Appendix B''}
+
+We have corrected this error.
+
+\item \emph{p.~23: ``It is possible that this effect was real, but small because of a bias for the distributive referent (leading to a floor effect)'' -- are you proposing that this bias is part of the prior distribution on meanings for this word? Or do you mean a general across-the-board bias toward distributive referents given the experimental setup?}
+
+We meant the latter interpretation.
+
+\item \emph{p.~26: ``Appendix Appendix C''}
+
+We have corrected this error.
 
 \item \emph{In experiment 3's irregular conditions, maybe the participants are thinking: Cubert wouldn't say the boxes were collectively tall unless they were collectively VERY tall; so here he must have been referring to the individual boxes. Admittedly, I'm not sure how this would apply to ``big''. This alternative story suggests that you should control for the actual height of the boxes when predicting responses. Maybe the difference between ``regular'' and ``irregular'' conditions just reflects the difference in total average height in the ``tall'' case.}
 
-The results of our new experiment (\emph{Expt.~4: Generalizing our findings}) explore and support this intuition: the probability that a specific interpretation would truthfully describe a state of affairs enters into the pragmatic calculus of utterance disambiguation. As suspected, interpretations that are more likely to be true (e.g., a collective interpretation for \emph{narrow} with a tall, thin stack of boxes) are more likely. We expand on this finding in our discussion of Expt.~4's results. \gcs{add more depending on whether we include the polarity model}
+The results of our new experiment (\emph{Expt.~4: Generalizing our findings}) explore and support this intuition: the probability that a specific interpretation would truthfully describe a state of affairs enters into the pragmatic calculus of utterance disambiguation. As suspected, interpretations that are more likely to be true (e.g., a collective interpretation for \emph{narrow} with a tall, thin stack of boxes) are more likely. We expand on this finding in our discussion of Expt.~4's results.
+
+\item \emph{p.~32: isn't alpha=7 fairly high for these models? In general, it would be nice to see some figures showing how ``the qualitative patterns reported below are robust to changes in these parameters and assumptions.''}
+
+There isn't yet a sense of what counts as high or low for the optimality parameter $\alpha$ in RSA models. Rather than discussing alternative parameter settings at length with accompanying plots, we chose to link to the full model, where the interested reader can manipulate the parameters and assumptions on their own.
 
 \een
 
