response letter progress

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -48,17 +48,21 @@
 
 \vspace{25pt}
 Gregory Scontras\\
+Department of Linguistics\\
+University of California, Irvine\\
+Irvine, CA 92697\\[10pt]
+
 Noah D.~Goodman\\
 Department of Psychology\\
 Stanford University\\
 Stanford, CA 94305\\[20pt]
 
-\noindent June XXX, 2016\\[20pt]}
+\noindent December XXX, 2016\\[20pt]}
 
 
 \noindent Dear Editor,\\
 
-\noindent We would like to thank you and the three reviewers for your helpful comments on our paper, ``Subjectivity predicts adjective ordering preferences.'' As you will recall, you highlighted the following concerns: 
+\noindent We would like to thank you and the three reviewers for your helpful comments on our paper, ``Subjectivity predicts adjective ordering preferences.'' As you will recall, you recommended that we revise our manuscript in response to the very positive and constructive feedback from the reviewers. In particular, you highlighted the following concerns: 
 
 \ben
 
@@ -68,13 +72,19 @@ The reviewer's concerns about our \emph{together} paraphrases stem from previous
 
 \item \emph{Reviewer 2 raised alternative accounts of the contextual effects on the interpretation of bare sentences.}
 
+We respond in detail to each the reviewer's concerns: silent collectivizing nouns (e.g., \emph{pile}; Reviewer 2's point 6 below), a particular (mis)understanding of the semantics of plurality (Reviewer 2's point 7), and the specific comparison classes at play (Reviewer 2's point 8). In each case, we discuss how we have addressed the concern, or why we believe the concern might have come from a misunderstanding of our design or the theoretical literature. 
+
 \item \emph{Reviewer 2 raised the possibility of `cumulative' construals in the interpretation of bare sentences.}
+
+\gcs{say something} Reviewer 2's point 3
 
 \item \emph{Reviewer 2 mentioned prior published research that is relevant for Experiment 1.}
 
 We now cite the suggested research and stress that our contribution is indeed a novel one (cf.~our response to Reviewer 2's point 1 below).
 
 \item \emph{Reviewer 2 recommends highlighting the novel contribution of the speaker's epistemic state.}
+
+\gcs{say something} Reviewer 2's point 2.
 
 \item \emph{Reviewer 1 was concerned that the effects of contextual predictability were only tested on a limited set of words and contexts.}
 
@@ -86,7 +96,7 @@ We have replaced most of our bar plots with the more informative violin plots th
 
 \item \emph{Reviewer 3 raised an alternative account of subjects' interpretation of `tall' in regular vs. irregular contexts.}
 
-The reviewer raised the issue of how the likely truth of a given interpretation might affect its probability: interpretations that are more obviously true should be more probable. We explore this idea in our new experiment (\emph{Expt.~4: Generalizing our findings}; cf.~our response to the Editor's point 6 above), and find that an interpretation's probability of being judged true affects that interpretation's overall probability. We expand on this point below in our responses to Reviewer 1's point 1 and Reviewer 3's point 3.
+The reviewer raised the issue of how the likely truth of a given interpretation might affect its probability: interpretations that are more obviously true should be more probable. We explore this idea in our new experiment (\emph{Expt.~4: Generalizing our findings}; cf.~our response to the Editor's point 6 above), and find that an interpretation's probability of being judged true affects that interpretation's overall probability. We expand on this point below in our responses to Reviewer 1's point 1 and Reviewer 3's point XXX.
 
 \een
 
@@ -134,7 +144,11 @@ All of the previous experimental work that the reviewer mentions investigates po
 
 \item \emph{The authors should highlight the role of the speaker's epistemic state.}
 
+\gcs{we put epistemic state and contextual noise on equal footing}
+
 \item \emph{The authors set up the contrast between distributive and collective interpretations without mentioning the possibility of cumulative interpretations. This reading should be mentioned.}
+
+\gcs{say something}
 
 \item \emph{The authors repeatedly refer to \emph{together} as though it unambiguously signals a collective interpretation, but this is most definitely not the case!}
 
@@ -156,7 +170,7 @@ According to standard theories of the semantics of plurality (e.g., Link, 1983, 
 
 \item \emph{The authors are aware of the context-dependence of the gradable adjectives that are the target of their investigation (e.g., \emph{big}, \emph{tall}, \emph{heavy}), but they do not make too much of this in the paper. One possibility is that \emph{The boxes (together) are big} could be taken to mean something like, `If you look at the boxes all together, then they form a comparison class such that they surpass some relevant threshold and could be considered to be big.'}
 
-\gcs{it's not clear to me what the point is here}
+All participants saw the same boxes, that is, the same comparison classes, regardless of experimental condition. What differed was their arrangements. For this reason, we rule out the context-dependence of the gradable threshold as a contributing factor to our results.
 
 \item \emph{Don't predicates such as \emph{have brown eyes} have to apply at the atomic level? If so, then aren't there predicates out there for which young language learners must learn that they obligatorily apply to atomic individuals that are members of a plurality? And if this is the case, then couldn't \emph{big} and \emph{tall} be stubbornly distributive at the lexical level?}
 
@@ -168,6 +182,8 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 
 \item \emph{I am not able to interpret \emph{These boxes are big} collectively. (I am a native speaker of American English.) I can, however, maybe access a collective interpretation of \emph{These boxes are tall}. This paper doesn't allow me to understand why I am encountering an introspective difference between these two predicates, or why we see one in the experimental results.}
 
+\gcs{big has more contextual noise; we can model this}
+
 \een
 
 \noindent\emph{Other comments}
@@ -177,11 +193,15 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 
 \item \emph{Abstract: The authors say that ``plural predication'' is a source of ambiguity, or should be disambiguated, but what is being disambiguated? Is it the plural predication, or the proposition, or the sentence level? (I revisit this issue of the locus of ambiguity below.)}
 
+\gcs{say something}
+
 \item \emph{Abstract: The phrase ``stubborn distributivity'' should be attributed to Schwarzschild, as it is in the main text.}
 
 We have avoided including references in our abstract. However, we clearly attribute the label ``stubborn distributivity'' to Schwarzschild in the text.
 
 \item \emph{Pg.~3: The transition at the end of the second paragraph is a bit abrupt.}
+
+\gcs{say something}
 
 \item \emph{Pg.~3: Kamp \& Partee (1995) (perhaps among others) should be cited in the second paragraph for properties that depend on the context of predication and comparison classes.}
 
@@ -207,7 +227,11 @@ We have replaced \emph{instantiate} with intransitive \emph{actualize}.
 
 \item \emph{Pg.~7, 14, 18, 23: It should be indicated how much participants were compensated.}
 
+\gcs{say something}
+
 \item \emph{Pg.~8: The between-subject inspect/move contrast should be theoretically motivated earlier in section 2.2.}
+
+\gcs{say something}
 
 \item \emph{Pg.~9: The sentence, ``The boxes each were big'' doesn't seem entirely natural to me. More natural would be, ``The boxes were each big.'' I'm assuming the authors wanted the words each and together to appear in the same syntactic position, and that is why they created the sentences in this way, but if that is the case, they should say so, in order to justify their choice of a non-default description that seems slightly unnatural.}
 
@@ -223,7 +247,7 @@ We have corrected this error.
 
 \item \emph{Pg.~11: If the difference is not significant, then I don't think the authors are able to mention here and later on (pg. 12) that the results approach significance, or highlight this.}
 
-
+\gcs{say something}
 
 \item \emph{Pg.~12: If \emph{heavy} is, as the authors say, ``complaisant toward collective interpretations,'' then shouldn't the percentage of `collective' interpretations obtained for this predicate be higher than was observed?}
 
@@ -234,6 +258,8 @@ We ran Expt.~1 in part to establish a baseline of behavior for the three predica
 This point is related to Reviewer 2's point 6 about silent nouns. See our response above for reasons why we find it unlikely that participants were treating the boxes as a group \emph{only} in the `move' scenario.
 
 \item \emph{Pg.~13: The ordering presented in the transition between the two paragraphs at the top was a little jolting.} 
+	
+\gcs{say something}	
 	
 \item \emph{Pg.~13: Experiment 1 is referred to as a ``reference task'' for what I think is the first time. Presumably this is because the speaker said, ``The boxes are\ldots'' But this was a bit confusing to encounter.}
 
@@ -273,11 +299,11 @@ As in our response to the previous point, at issue is the readily-accessible int
 
 \item \emph{Pg.~18: A similar concern might be raise about \emph{big-boys}, which has two interpretations.}
 
-
+\gcs{say something}
 
 \item \emph{Pg.~19-20: I would have expected the \% `collective' associated with \emph{heavy} to be higher, and would have liked for the authors to say a little more about the relatively low \% observed.}
 
-We ran these experiments so that we could calibrate our (and the reader's) expectations. A semanticist who identifies `heavy' as one of the few gradable predicates that allows a collective interpretation would likely have an inflated sense of the predicate's collective interpretation rate.
+We approached this issue as an empirical question, and ran the experiment so that we could calibrate our (and the reader's) expectations. Granted, a semanticist who identifies `heavy' as one of the few gradable predicates that allows a collective interpretation would likely have a higher sense of the predicate's collective interpretation rate, but here we are interested in the intuitions of non-experts.
 	
 \item \emph{Pg.~19-20: The \% `collective' for \emph{big} and \emph{tall} sure looks like an indication of ``stubborn distributivity''+noise to me! If the authors think that the results should not be interpreted in this way, I think they should address this possible interpretation head on.}
 
@@ -289,26 +315,36 @@ The leftmost point on the scale (corresponding to `definitely not') was coded as
 
 \item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses as `vague expressions.'}
 
+\gcs{say something}
+
 \item \emph{Pg.~31: The authors' point that the speaker ``chooses an utterance u that would most effectively communicate some state s to a literal listener'' seems to me to indicate that the speaker will take
 into account morphosyntactic and structural information when doing so, which is a point that Syrett \& Musolino (2015) have made when discussing the disambiguation of sentences with possible collective and distributive senses. The authors do not really discuss such structural/surface level cues, but should acknowledge them, because they figure into the form of the utterance chosen by the speaker.}
 
+\gcs{say something}
+
 \item \emph{Pg.~31: The authors say that the speaker's belief distribution about the state of the world depends on ``some observations o of the true world.'' Is this way of phrasing things meant to privilege perceptual over conceptual information?}
+
+\gcs{say something}
 
 \item \emph{Pg.~32: Why is the variability of the context considered a semantic factor?} 
 
+\gcs{say something}
+
 \item \emph{Pg.~32: Please explain the degrees in section 5.2.}
+
+\gcs{say something}
 
 \item \emph{Pg.~34: The wording ``an old observation about collective interpretations for gradable predicates with plural subjects'' makes me wonder at what level the authors see the ambiguity being encoded (the VP level or the sentence level), so it might be helpful to add a note somewhere about this, since there have been different approaches to the semantic treatment of the collective/distributive ambiguity over the years. (The comment in the top paragraph on pg.~38 about the locus of ambiguity is also related to this point.)}
 
-
+\gcs{say something}
 
 \item \emph{Pg.~36: The authors suggest that, ``stubbornly distributive predicates name collective properties that are difficult to accurately communicate.'' By this point in the paper, I am so far from convinced that the participants are really accessing a true collective reading, that on this page, I am not on board with the conclusions, and am certainly not in agreement with this claim, even though I do agree with the authors that the context is able to bring out readings that are otherwise suppressed, and I think the experiments presented in the paper do a nice job of showing that this is the case. Whether or not these non-strictly-distributive readings can really be taken to be collective readings is another matter.}
 
-
+\gcs{say something}
 
 \item \emph{Pg.~38: I would think that if the noun phrase is construed as an aggregate (i.e., a single collection) instead of a group, then the predicate is no longer applying to the group, but rather to the collectivizer, in which case we return to the possibility that participants may have inserted a silent collectivizing noun into their interpretation of the sentences.}
 
-Please see our responses to Reviewer 2's points 6 and 28 above.
+This point again raises the possibility of silent collectivizing nouns. Please see our responses to Reviewer 2's points 6 and 28 above.
 
 \end{enumerate}
 
@@ -343,7 +379,7 @@ We have corrected this error.
 
 We speculate on the lack of a significant effect of the scenario manipulation later in our paper (cf.~our response to Reviewer 3's point 12 below). Given that we had the same manipulation in our Expt.~3 and found a significant effect there, we doubt that participants were simply ignoring it.
 
-\item \emph{p.~15: 11Appendix Appendix B''}
+\item \emph{p.~15: Appendix Appendix B''}
 
 We have corrected this error.
 
