more progress on response letter

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -76,7 +76,7 @@ We respond in detail to each the reviewer's concerns: silent collectivizing noun
 
 \item \emph{Reviewer 2 raised the possibility of `cumulative' construals in the interpretation of bare sentences.}
 
-\gcs{say something} Reviewer 2's point 3
+Cumulative readings arise for sentences with sequences of noun phrases (e.g., \emph{600 Dutch firms use 5,000 American computers}); they are not relevant to the simple gradable predicates we consider in our study. We expand on this point in our response to Reviewer 2's point 3.
 
 \item \emph{Reviewer 2 mentioned prior published research that is relevant for Experiment 1.}
 
@@ -126,7 +126,7 @@ We intentionally separated the effects of speaker knowledge and noise in the agg
 
 \item \emph{There needs to be more information about the experimental participants. Nationality? Age? How much were they paid?}
 
-\gcs{got info; how much should we include and where should we put it?}
+We have added the requested information, as well as gender self-reports, for each of our experiments.
 
 \een
 
@@ -148,7 +148,7 @@ All of the previous experimental work that the reviewer mentions investigates po
 
 \item \emph{The authors set up the contrast between distributive and collective interpretations without mentioning the possibility of cumulative interpretations. This reading should be mentioned.}
 
-\gcs{say something}
+Cumulative readings arise for sentences with sequences of noun phrases (e.g., \emph{600 Dutch firms use 5,000 American computers}). The sentences we consider feature a simple (gradable) predicate with its subject; the configuration that would deliver a cumulative construal does not arise. In our revision, we now explicitly mention cumulative readings and that they are not relevant to our discussion of distributive vs.~collective ambiguities for gradable predicates.
 
 \item \emph{The authors repeatedly refer to \emph{together} as though it unambiguously signals a collective interpretation, but this is most definitely not the case!}
 
@@ -182,7 +182,7 @@ As with distributive predicates like \emph{have brown eyes} (cf.~our response to
 
 \item \emph{I am not able to interpret \emph{These boxes are big} collectively. (I am a native speaker of American English.) I can, however, maybe access a collective interpretation of \emph{These boxes are tall}. This paper doesn't allow me to understand why I am encountering an introspective difference between these two predicates, or why we see one in the experimental results.}
 
-\gcs{big has more contextual noise; we can model this}
+The relative availability of collective interpretations for \emph{big} and \emph{tall} (and, indeed, \emph{heavy}) depends on the contextual predictability of the collective properties these predicates name. \emph{Tall}'s collective property is more predictable than \emph{big}'s, hence the introspective difference. One of the main points of our paper is exactly this: collective interpretations are available to the extent that they are potentially informative, and informativity depends crucially on the contextual predictability of the collective properties at play.
 
 \een
 
@@ -201,7 +201,7 @@ We have avoided including references in our abstract. However, we clearly attrib
 
 \item \emph{Pg.~3: The transition at the end of the second paragraph is a bit abrupt.}
 
-\gcs{say something}
+We have softened the transition.
 
 \item \emph{Pg.~3: Kamp \& Partee (1995) (perhaps among others) should be cited in the second paragraph for properties that depend on the context of predication and comparison classes.}
 
@@ -227,11 +227,11 @@ We have replaced \emph{instantiate} with intransitive \emph{actualize}.
 
 \item \emph{Pg.~7, 14, 18, 23: It should be indicated how much participants were compensated.}
 
-\gcs{say something}
+We have added the requested information (cf.~our response to Reviewer 1's point 4 above).
 
 \item \emph{Pg.~8: The between-subject inspect/move contrast should be theoretically motivated earlier in section 2.2.}
 
-\gcs{say something}
+We now motivate this manipulation in Section 2.2, and preview it earlier in at the start of Section 2.
 
 \item \emph{Pg.~9: The sentence, ``The boxes each were big'' doesn't seem entirely natural to me. More natural would be, ``The boxes were each big.'' I'm assuming the authors wanted the words each and together to appear in the same syntactic position, and that is why they created the sentences in this way, but if that is the case, they should say so, in order to justify their choice of a non-default description that seems slightly unnatural.}
 
@@ -247,7 +247,7 @@ We have corrected this error.
 
 \item \emph{Pg.~11: If the difference is not significant, then I don't think the authors are able to mention here and later on (pg. 12) that the results approach significance, or highlight this.}
 
-\gcs{say something}
+We mention the lack of significance in anticipation of the significant result from Expt.~3.
 
 \item \emph{Pg.~12: If \emph{heavy} is, as the authors say, ``complaisant toward collective interpretations,'' then shouldn't the percentage of `collective' interpretations obtained for this predicate be higher than was observed?}
 
@@ -259,7 +259,7 @@ This point is related to Reviewer 2's point 6 about silent nouns. See our respon
 
 \item \emph{Pg.~13: The ordering presented in the transition between the two paragraphs at the top was a little jolting.} 
 	
-\gcs{say something}	
+We have preserved the ordering in service of the logical flow of our discussion. However, we have attempted to soften the transition.
 	
 \item \emph{Pg.~13: Experiment 1 is referred to as a ``reference task'' for what I think is the first time. Presumably this is because the speaker said, ``The boxes are\ldots'' But this was a bit confusing to encounter.}
 
@@ -299,7 +299,7 @@ As in our response to the previous point, at issue is the readily-accessible int
 
 \item \emph{Pg.~18: A similar concern might be raise about \emph{big-boys}, which has two interpretations.}
 
-\gcs{say something}
+As with our responses to the previous two point, our focus is on the readily-accessible interpretation for ``the boys were big,'' which comments on the physical size(s) of some boys.
 
 \item \emph{Pg.~19-20: I would have expected the \% `collective' associated with \emph{heavy} to be higher, and would have liked for the authors to say a little more about the relatively low \% observed.}
 
@@ -313,7 +313,7 @@ We address this possible interpretation head-on in the \emph{Results} section of
 
 The leftmost point on the scale (corresponding to `definitely not') was coded as 0; the rightmost point (corresponding to `definitely') was coded as 1. We presented the sliding scales next to each other, rather than across items, to highlight the potential ambiguity of the test sentences.
 
-\item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses as `vague expressions.'}
+\item \emph{Pg.~29: The authors should explain what they mean by saying that the collective and distributive senses are `vague expressions.'}
 
 \gcs{say something}
 
