--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -190,7 +190,7 @@ Particularly puzzling is the distributive vs.~collective ambiguity of plural pre
 When hearing \Last, we may infer that each box on its own counts as heavy, as in \Last[a], or only that their total weight is heavy, as in \Last[b]. Under a collective interpretation, many light boxes may together count as heavy \citep{scha1984}.
 How is the interpretation determined?
 
-Consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates do not admit collective construals (e.g., \emph{big}, \emph{tall}, \emph{round}), in constrast to those that do (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}). 
+To help answer this question, we consider the well-documented yet poorly understood phenomenon of ``stubborn distributivity'' \citep{quine1960,schwarzschild2011,vazquezrojas2012,zhang2013,syrett2015}, whereby some predicates do not admit collective construals (e.g., \emph{big}, \emph{tall}, \emph{round}), in constrast to those that do (e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}). 
 %(e.g., \emph{heavy}, \emph{expensive}, \emph{voluminous}) readily admit collective construals, whiles others (e.g., \emph{big}, \emph{tall}, \emph{round}) do not. 
 %When complaisantly collective gradable predicates like \emph{heavy} (also \emph{expensive}, \emph{voluminous}) are used in plural predications the meaning is ambigious. Under a distributive reading, \ref{boxeseach}, the relevant property gets ascribed to each member of the plural subject. Under a collective reading, \ref{boxestogether}, we ascribe the property to the subject as a whole---in the case of \ref{boxes} commenting on the total weight of the boxes; many light boxes may together count as heavy \citep{scha1984}.
 %The collective interpretation available to \emph{heavy} proves elusive for most other gradable predicates. 
@@ -410,16 +410,16 @@ One way to access interpretations of potentially ambiguous plural predications i
 
 Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm.\footnote{Previous experimental work has investigated the disambiguating potential of \emph{each} and so-called ``post-VP'' \emph{together} (i.e., \emph{the boxes were big together}). \citet{syrettmusolino2013,syrettmusolino2016} found that these particles reliably disambiguate between distributive and collective interpretations for adults. However, we are aware of no empirical work on post-NP \emph{together}, which we employ in our experimental materials.} We do so by asking participants to choose between two collections of boxes as the referent of each definite description in \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection hold the property individually (but not collectively), while the other collection hold the property (but the individuals in it do not).
 We expect the two disambiguated sentences to lead to robust selection of the corresponding collection, while selections for the ambiguous sentence will indicate preferences for its interpretation.
-In addition, we begin to explore the role of context by manipulating the plausible knowledge of the speaker: whether he is likely to have access to the relevant information about each object, or only about the collection.
+In addition, we begin to explore the role of context by manipulating the plausible knowledge of the speaker: whether he is likely to have access to the relevant information about each object (by, e.g., inspecting each box), or only about the collection (by, e.g., move the boxes all together).
 
 \subsection{Participants}
 
-We recruited 50 participants through Amazon.com's Mechanical Turk crowd-sourcing service. Participants were compensated for their participation.
+We recruited 50 participants (21 female, 29 male; mean age: 31) with U.S.~IP addresses through Amazon.com's Mechanical Turk crowd-sourcing service. Participants received \$0.25 for their participation. 
 
 
 \subsection{Design and methods}
 
-Participants were introduced to Cubert, a worker in a box factory.\footnote{The full experiment is viewable online at \url{http://cocolab.stanford.edu/experiments/collective/expt1/expt1.html}.} Between participants, the context scenario either had Cubert ``move'' or ``inspect'' the boxes that he received from a dispenser. In ``move'' scenarios, Cubert appeared with a cart positioned under the dispenser (Fig.~\ref{expt1context}, left); in ``inspect'' scenarios, there was no cart (Fig.~\ref{expt1context}, right). Participants were told that after moving/inspecting a shipment of boxes, Cubert told his friend Dot about the boxes he moved/inspected. Their task was to help Dot decide which boxes Cubert was referring to with his utterance. Participants chose between two sets of boxes, one that implied a collective interpretation of the utterance (five small boxes, Fig.\ \ref{expt1trial}, left) and one that implied a distributive interpretation (two large boxes which were together smaller than the five small boxes, Fig.\ \ref{expt1trial}, right).
+Participants were introduced to Cubert, a worker in a box factory.\footnote{The full experiment is viewable online at \url{http://cocolab.stanford.edu/experiments/collective/expt1/expt1.html}.} To manipulate Cubert's access to knowledge about the boxes, between participants, the context scenario either had Cubert ``move'' or ``inspect'' the boxes that he received from a dispenser. In ``move'' scenarios, Cubert appeared with a cart positioned under the dispenser (Fig.~\ref{expt1context}, left); in ``inspect'' scenarios, there was no cart (Fig.~\ref{expt1context}, right). Participants were told that after moving/inspecting a shipment of boxes, Cubert told his friend Dot about the boxes he moved/inspected. Their task was to help Dot decide which boxes Cubert was referring to with his utterance. Participants chose between two sets of boxes, one that implied a collective interpretation of the utterance (five small boxes, Fig.\ \ref{expt1trial}, left) and one that implied a distributive interpretation (two large boxes which were together smaller than the five small boxes, Fig.\ \ref{expt1trial}, right).
 
 \begin{figure}[h]
 	\centering
@@ -471,7 +471,7 @@ As discussed above, one candidate factor is the contextual predictability of the
 
 The results of the current experiment also leave open the possibility of the influence of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights (having plausibly moved them \emph{en masse}); the listener is therefore less likely to assume that the speaker intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
 
-But before we manipulate contextual predictability and speaker knowledge directly, we extend the paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication, investigating the role of the local linguistic context.
+Before manipulating contextual predictability and speaker knowledge directly, we extend the paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication, investigating the role of the local linguistic context.
 
 
 \section{Experiment 2: Naturally-occurring examples}
@@ -489,7 +489,7 @@ We begin with naturally-occurring examples of plural predications extracted from
 
 \subsubsection{Participants}
 
-We recruited 90 participants through Amazon.com's Mechanical Turk. Participants were compensated for participation.
+We recruited 90 participants (46 female, 44 male; mean age: 36) with U.S.~IP addresses through Amazon.com's Mechanical Turk. Participants received \$0.30 for their participation.
 
 \subsubsection{Design and methods}
 
@@ -555,7 +555,7 @@ Due to the limited number of instances of plural predication with these predicat
 
 \subsubsection{Participants}
 
-We recruited 30 participants through Amazon.com's Mechanical Turk. Participants were compensated for participation.
+We recruited 30 participants (25 female, 5 male; mean age: 38) with U.S.~IP addresses through Amazon.com's Mechanical Turk. Participants received \$0.30 for their participation.
 
 \subsubsection{Design and methods}
 
@@ -672,7 +672,7 @@ In Expt.~3, we repeat the move/inspect manipulation using the pure paraphrase en
 
 \subsection{Participants}
 
-We recruited 80 participants through Amazon's Mechanical Turk. Participants were compensated for participation.
+We recruited 80 participants (26 female, 54 male; mean age: 32) with U.S.~IP addresses through Amazon's Mechanical Turk. Participants received \$0.25 for their participation.
 
 \subsection{Design and methods}
 
@@ -757,7 +757,7 @@ tested, and might not generalize to a broader set of adjectives. Therefore, to t
 
 \subsection{Participants}
 
-We recruited 54 participants through Amazon's Mechanical Turk. Participants were compensated for their participation.
+We recruited 54 participants (21 female, 32 male; mean age: 35) with U.S.~IP addresses through Amazon's Mechanical Turk.\footnote{One participant chose not to provide a gender.} Participants received \$0.50 for their participation.
 
 \subsection{Design and methods}
 
@@ -888,7 +888,7 @@ The unambiguous distributive utterance, \Last[a], is a universal quantification 
 The unambiguous collective utterance, \Last[b], is again a vague scalar meaning: the collective degree must exceed the collective threshold $\theta_c$. 
 However, the collective degree captures two assumptions. First, we follow the work on collective semantics in assuming that the appropriate aggregation is based on a sum \citep[e.g.,][]{scha1984}: the total degree of the collection.
 Second, we assume that the computation of this total degree may depend on contextual factors $c$ (such as the particular arrangement of the objects); we treat $c$ as a simple additive variable that can distort the total degree of the state---an approximation of the many ways that context could affect the collective property. 
-Finally, the ambiguous utterance, \Last[c], is governed by the variable $v$: depending on $v$ it is either collective or distributive.
+Finally, the ambiguous utterance, \Last[c], is governed by the variable $v$: depending on $v$ it is either collective or distributive.\footnote{We ignore so-called ``cumulative'' construals of plural predication, which arise for sentences with sequences of noun phrases (e.g., \emph{600 Dutch firms use 5,000 American computers}; \citealp{scha1984}).}
 
 %Specifically, we assume that, depending on $v$, the plural predication is either interpreted distributively, \Next[a], or collectively, \Next[b]. Each of these senses may further depend on context, $c$.
 %
